crates/aranya-policy-lang/tests/data/keyword_collision/function_name.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Reserved identifier
  |
1 | function int(x int) int {
  |          ^^^ int
